--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     tty: true
     stdin_open: true
     volumes: 
-      - npm5:/app/node_modules
+      - api_web_modules:/app/node_modules
       - ./web:/app
     ports:
       - 2017:2017
@@ -19,7 +19,7 @@ services:
     tty: true
     stdin_open: true
     volumes:
-      - npm5:/app/node_modules
+      - api_server_modules:/app/node_modules
       - ./server:/app
     command: npm run compose
     depends_on: 
@@ -28,4 +28,5 @@ services:
     image: mongo:latest
     container_name: api-db
 volumes:
-  npm5:
+  api_web_modules:
+  api_server_modules:
