--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 version: "3"
 services:
   web:
-    image: node:8-alpine
+    build:
+      context: ./web
     container_name: api-web
     working_dir: /app
     tty: true
@@ -13,7 +14,8 @@ services:
       - 2017:2017
     command: npm run compose
   server:
-    image: node:8-alpine
+    build:
+      context: ./server
     container_name: api-server
     working_dir: /app
     tty: true
@@ -21,6 +23,9 @@ services:
     volumes:
       - api_server_modules:/app/node_modules
       - ./server:/app
+    ports:
+      - 2018:2018
+      - 8102:8012
     command: npm run compose
     depends_on: 
       - db
