--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "compose": "npm run date && npm run proxy && npm run init && sh"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "iview": "^2.0.0-rc.18",
     "vue": "^2.3.3",
     "vue-resource": "^1.3.4",
