--- a/web/package.json
+++ b/web/package.json
@@ -11,15 +11,15 @@
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "test": "npm run unit",
     "lint": "eslint --ext .js,.vue src test/unit/specs",
-    "date": "apk update && apk add tzdata && cp /usr/share/zoneinfo/Hongkong /etc/localtime",
     "proxy": "npm set registry https://registry.npm.taobao.org",
     "init": "npm i",
-    "compose": "npm run date && npm run proxy && npm run init && sh"
+    "compose": "npm run proxy && npm run init && sh"
   },
   "dependencies": {
     "axios": "^0.16.2",
     "iview": "^2.0.0-rc.18",
     "vue": "^2.3.3",
+    "vue-class-component": "^5.0.2",
     "vue-resource": "^1.3.4",
     "vue-router": "^2.3.1"
   },
@@ -29,6 +29,7 @@
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
     "babel-plugin-istanbul": "^4.1.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
