implement project controller

--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "compose": "npm run proxy && npm run init && sh",
-    "dev": "nodemon -L -e ts,json  --exec \"tsc &&node --harmony --inspect=0.0.0.0:5858 dist/app.js\"",
+    "dev": "tsc -w & nodemon --inspect=0.0.0.0:5858 --delay 100ms -w ./dist dist/app.js",
     "init": "npm i",
     "proxy": "npm set registry https://registry.npm.taobao.org",
     "start": "pm2 start ./dist/app.js",
