--- a/web/.babelrc
+++ b/web/.babelrc
@@ -6,13 +6,14 @@
         "browsers": ["> 1%", "last 2 versions", "not ie <= 8"]
       }
     }],
-    "stage-2"
+    "stage-2",
+    "es2015"
   ],
-  "plugins": ["transform-runtime"],
+  "plugins": ["transform-runtime", "transform-vue-jsx"],
   "env": {
     "test": {
-      "presets": ["env", "stage-2"],
-      "plugins": ["istanbul"]
+      "presets": ["env", "stage-2", "es2015"],
+      "plugins": ["istanbul", "transform-vue-jsx"]
     }
   }
 }
