--- a/web/package.json
+++ b/web/package.json
@@ -17,9 +17,11 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "element-ui": "^1.4.4",
     "iview": "^2.0.0-rc.18",
     "vue": "^2.3.3",
     "vue-class-component": "^5.0.2",
+    "vue-property-decorator": "^5.2.1",
     "vue-resource": "^1.3.4",
     "vue-router": "^2.3.1"
   },
@@ -27,11 +29,15 @@
     "autoprefixer": "^6.7.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
+    "babel-helper-vue-jsx-merge-props": "^2.0.2",
     "babel-loader": "^6.2.10",
     "babel-plugin-istanbul": "^4.1.1",
+    "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-preset-env": "^1.3.2",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
     "chai": "^3.5.0",
