--- a/web/package.json
+++ b/web/package.json
@@ -16,9 +16,12 @@
     "compose": "npm run proxy && npm run init && sh"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.74",
     "axios": "^0.16.2",
     "element-ui": "^1.4.4",
     "iview": "^2.0.0-rc.18",
+    "lodash": "^4.17.4",
+    "mockjs": "^1.0.1-beta3",
     "vue": "^2.3.3",
     "vue-class-component": "^5.0.2",
     "vue-property-decorator": "^5.2.1",
