--- a/server/package.json
+++ b/server/package.json
@@ -20,8 +20,8 @@
     "koa-better-router": "^2.1.1",
     "koa-bodyparser": "^2.5.0",
     "koa-router": "^7.2.1",
-    "lodash": "^4.17.4",
     "mongoose": "^4.11.0",
+    "path-to-regexp": "^2.0.0",
     "request": "^2.81.0",
     "rxjs": "^5.4.3"
   },
