--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,9 @@ package-lock.json
 npm-debug.log
 node_modules/
 dist/
-.nyc_output/
 coverage/
+server/.nyc_output/
+server/static/
+server/upload/
+server/report/
+server/key
