--- a/server/package.json
+++ b/server/package.json
@@ -16,9 +16,10 @@
   "license": "ISC",
   "dependencies": {
     "babel-eslint": "^7.1.1",
+    "jsonwebtoken": "^8.0.1",
     "koa": "^2.3.0",
+    "koa-better-body": "^3.0.4",
     "koa-better-router": "^2.1.1",
-    "koa-bodyparser": "^2.5.0",
     "koa-router": "^7.2.1",
     "mongoose": "^4.11.0",
     "path-to-regexp": "^2.0.0",
