--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "compose": "npm run proxy && npm run init && sh",
-    "dev": "tsc -w & nodemon --inspect=0.0.0.0:5858 --delay 100ms -w ./dist dist/app.js",
+    "dev": "tsc -w & nodemon --inspect=0.0.0.0:5858 --delay 100ms -w ./dist ./dist/app.js",
     "init": "npm i",
     "proxy": "npm set registry https://registry.npm.taobao.org",
     "start": "pm2 start ./dist/app.js",
@@ -15,6 +15,7 @@
   "author": "yalishizhude",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.16.2",
     "babel-eslint": "^7.1.1",
     "jsonwebtoken": "^8.0.1",
     "koa": "^2.3.0",
