--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     working_dir: /app
     tty: true
     stdin_open: true
+    restart: always
     volumes: 
       - api_web_modules:/app/node_modules
       - ./web:/app
@@ -22,6 +23,7 @@ services:
     working_dir: /app
     tty: true
     stdin_open: true
+    restart: always
     volumes:
       - api_server_modules:/app/node_modules
       - ./server:/app
@@ -36,6 +38,7 @@ services:
   db:
     image: mongo:latest
     container_name: api-db
+    restart: always
     ports:
       - 27018:27017
     networks: 
