--- a/server/package.json
+++ b/server/package.json
@@ -26,7 +26,8 @@
     "mongoose": "^4.11.0",
     "path-to-regexp": "^2.0.0",
     "request": "^2.81.0",
-    "rxjs": "^5.4.3"
+    "rxjs": "^5.4.3",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "ava": "^0.22.0",
