--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "compose": "npm run proxy && npm run init && sh",
-    "dev": "tsc -w & nodemon --inspect=0.0.0.0:5858 --delay 100ms -w ./dist dist/app.js",
+    "dev": "tsc -w & nodemon --inspect=0.0.0.0:5858 --delay 100ms -w ./dist ./dist/app.js",
     "init": "npm i",
     "proxy": "npm set registry https://registry.npm.taobao.org",
     "start": "pm2 start ./dist/app.js",
@@ -15,15 +15,19 @@
   "author": "yalishizhude",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.16.2",
     "babel-eslint": "^7.1.1",
+    "jsonwebtoken": "^8.0.1",
     "koa": "^2.3.0",
+    "koa-better-body": "^3.0.4",
     "koa-better-router": "^2.1.1",
-    "koa-bodyparser": "^2.5.0",
     "koa-router": "^7.2.1",
-    "lodash": "^4.17.4",
+    "mockjs": "^1.0.1-beta3",
     "mongoose": "^4.11.0",
+    "path-to-regexp": "^2.0.0",
     "request": "^2.81.0",
-    "rxjs": "^5.4.3"
+    "rxjs": "^5.4.3",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "ava": "^0.22.0",
