--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "@types/lodash": "^4.14.74",
     "axios": "^0.16.2",
     "element-ui": "^1.4.9",
+    "hotkeys-js": "^2.0.4",
     "lodash": "^4.17.4",
     "mockjs": "^1.0.1-beta3",
     "vue": "^2.3.3",
