--- a/server/package.json
+++ b/server/package.json
@@ -15,8 +15,10 @@
   "author": "yalishizhude",
   "license": "ISC",
   "dependencies": {
+    "ajv": "^5.3.0",
     "axios": "^0.16.2",
     "babel-eslint": "^7.1.1",
+    "json-schema-faker": "^0.5.0-rc11",
     "jsonwebtoken": "^8.0.1",
     "koa": "^2.3.0",
     "koa-better-body": "^3.0.4",
