--- a/web/Dockerfile4dev
+++ b/web/Dockerfile4dev
@@ -1,13 +1,12 @@
-# api-server
+# vue-cli
 FROM node:8
 RUN mkdir /app
 RUN chmod 777 /app
 WORKDIR /app
-EXPOSE 2018
+EXPOSE 8080 2017
+VOLUME ["/app"]
 
 COPY ./Hongkong /etc/localtime
 RUN npm set registry https://registry.npm.taobao.org
-RUN npm i -g pm2
-ENV DB_HOST=api-db
-COPY ./ /app
-ENTRYPOINT pm2 start --name api-server ./dist/app.js && bash
+RUN npm i -g typescript
+ENV SERVER_HOST=api-server-dev
