--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,41 +1,35 @@
-version: "3"
+version: "2"
 services:
   web:
     build:
       context: ./web
+      dockerfile: Dockerfile
     container_name: api-web
-    working_dir: /app
+    working_dir: /etc/nginx/
     tty: true
     stdin_open: true
-    volumes: 
-      - api_web_modules:/app/node_modules
-      - ./web:/app
     ports:
-      - 20170:20170
-    command: npm run compose
+      - 2017:2017
+    depends_on: 
+      - server
   server:
     build:
       context: ./server
+      dockerfile: Dockerfile
     container_name: api-server
     working_dir: /app
     tty: true
     stdin_open: true
-    volumes:
-      - api_server_modules:/app/node_modules
-      - ./server:/app
     ports:
-      - 20180:20180
-      - 8102:5858
-    command: npm run compose
+      - 2018:2018
     depends_on: 
       - db
   db:
-    image: mongo:latest
+    image: mongo:3
     container_name: api-db
+    tty: true
+    stdin_open: true
     volumes:
       - ./data:/data
     ports:
-      - 27000:27017
-volumes:
-  api_web_modules:
-  api_server_modules:
+      - 27001:27017
