--- a/server/Dockerfile4dev
+++ b/server/Dockerfile4dev
@@ -3,11 +3,9 @@ FROM node:8
 RUN mkdir /app
 RUN chmod 777 /app
 WORKDIR /app
+VOLUME ["/app"]
 EXPOSE 2018
-
+ENV DB_HOST=api-db-dev
 COPY ./Hongkong /etc/localtime
 RUN npm set registry https://registry.npm.taobao.org
-RUN npm i -g pm2
-ENV DB_HOST=api-db
-COPY ./ /app
-ENTRYPOINT pm2 start --name api-server ./dist/app.js && bash
+RUN npm i -g nodemon typescript@2.4
