--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,11 +1,4 @@
-# vue-cli
-FROM node:8
-RUN mkdir /app
-RUN chmod 777 /app
-WORKDIR /app
-EXPOSE 8080 2017
-VOLUME ["/app"]
-
+FROM nginx:1.12-alpine
 COPY ./Hongkong /etc/localtime
-RUN npm set registry https://registry.npm.taobao.org
-RUN npm i -g typescript
+COPY ./nginx.conf /etc/nginx/conf.d
+COPY ./dist /usr/share/nginx/html
