--- a/web/package.json
+++ b/web/package.json
@@ -17,14 +17,15 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "babel-runtime": "^6.26.0",
     "element-ui": "^1.4.9",
     "hotkeys-js": "^2.0.4",
     "json-schema-faker": "^0.5.0-rc11",
     "lodash": "^4.17.4",
     "vue": "^2.3.3",
-    "vue-class-component": "^5.0.2",
-    "vue-property-decorator": "^5.2.1",
-    "vue-router": "^2.3.1"
+    "vue-class-component": "^6.1.0",
+    "vue-property-decorator": "^6.0.0",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
@@ -65,8 +66,7 @@
     "karma": "^1.4.1",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "karma-phantomjs-shim": "^1.4.0",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-sinon-chai": "^1.3.1",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.30",
@@ -76,7 +76,6 @@
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.2.0",
-    "phantomjs-prebuilt": "^2.1.14",
     "pug": "^2.0.0-rc.2",
     "pug-loader": "^2.3.0",
     "rimraf": "^2.6.0",
