--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
     "hotkeys-js": "^2.0.4",
     "json-schema-faker": "^0.5.0-rc11",
     "lodash": "^4.17.4",
+    "systemjs": "^0.20.19",
     "vue": "^2.3.3",
     "vue-class-component": "^6.1.0",
     "vue-property-decorator": "^6.0.0",
