--- a/web/package.json
+++ b/web/package.json
@@ -18,8 +18,10 @@
   "dependencies": {
     "axios": "^0.16.2",
     "babel-runtime": "^6.26.0",
+    "clipboard": "^1.7.1",
     "element-ui": "^1.4.9",
     "hotkeys-js": "^2.0.4",
+    "immutable": "^3.8.2",
     "json-schema-faker": "^0.5.0-rc11",
     "lodash": "^4.17.4",
     "systemjs": "^0.20.19",
