--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "compose": "npm run proxy && npm run init && sh",
+    "compose": "yarn run proxy && yarn run init && bash",
     "dev": "tsc -w & nodemon --inspect=0.0.0.0:5858 --delay 100ms -w ./dist ./dist/app.js",
-    "init": "npm i",
+    "init": "yarn install --check-files",
     "proxy": "npm set registry https://registry.npm.taobao.org",
     "start": "pm2 start ./dist/app.js",
     "test": "tsc -w & nyc ava -w --verbose",
