--- a/web/package.json
+++ b/web/package.json
@@ -9,18 +9,18 @@
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
-    "test": "npm run unit",
+    "test": "yarn run unit",
     "lint": "eslint --ext .js,.vue src test/unit/specs",
     "proxy": "npm set registry https://registry.npm.taobao.org",
-    "init": "npm i",
-    "compose": "npm run proxy && npm run init && sh"
+    "init": "yarn install --check-files",
+    "compose": "yarn run proxy && yarn run init && bash"
   },
   "dependencies": {
     "axios": "^0.16.2",
     "babel-runtime": "^6.26.0",
-    "clipboard": "^1.7.1",
     "element-ui": "^1.4.9",
     "hotkeys-js": "^2.0.4",
+    "http-server": "^0.10.0",
     "immutable": "^3.8.2",
     "json-schema-faker": "^0.5.0-rc11",
     "lodash": "^4.17.4",
@@ -67,9 +67,9 @@
     "http-proxy-middleware": "^0.17.3",
     "inject-loader": "^3.0.0",
     "karma": "^1.4.1",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
-    "karma-chrome-launcher": "^2.2.0",
     "karma-sinon-chai": "^1.3.1",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.30",
