--- a/web/nginx.conf
+++ b/web/nginx.conf
@@ -11,7 +11,7 @@ server {
   root /usr/share/nginx/html;
   index index.html;
   location /api {
-    proxy_pass http://api-server:2018;
+    proxy_pass http://localhost:2018;
   }
   location / {
     try_files $uri $uri/ /index.html;
