modify docker-compose & api edit style

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -2,3 +2,4 @@ FROM nginx:1.12-alpine
 COPY ./Hongkong /etc/localtime
 COPY ./nginx.conf /etc/nginx/conf.d
 COPY ./dist /usr/share/nginx/html
+ENTRYPOINT nginx -g 'daemon off;'
