--- a/web/Dockerfile4dev
+++ b/web/Dockerfile4dev
@@ -10,4 +10,4 @@ COPY ./Hongkong /etc/localtime
 RUN npm set registry https://registry.npm.taobao.org
 RUN yarn global add typescript
 ENV SERVER_HOST=api-server-dev
-ENTRYPOINT yarn run compose
+RUN echo "请执行 npm run init 安装依赖"
