--- a/server/Dockerfile4dev
+++ b/server/Dockerfile4dev
@@ -9,4 +9,4 @@ ENV DB_HOST=api-db-dev
 COPY ./Hongkong /etc/localtime
 RUN npm set registry https://registry.npm.taobao.org
 RUN yarn global add nodemon typescript@2.4
-ENTRYPOINT yarn run compose
+RUN echo "请执行 npm run init 安装依赖"
